added: mediaquery in DB

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-
+  <!-- <script src='https://www.noupe.com/embed/01981b8d923573d789aa1a8722d9d4e31e6c.js'></script> -->
 </body>
 
 </html>
